# mkpy

./: README.md  pyproject.toml
.github/workflows/: pypi.yml  test.yml
documentation/: cli.md  customization.md  index.md  install.md  themes.md  usage.md
mkpy/: __init__.py  __main__.py  cli.py  docs.py  markdown.py  server.py  themes.py
tests/: test_mkpy.py
